<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Zaber" Id="{3f86e019-844c-44a2-a406-e223e61a7679}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Zaber EXTENDS FB_HMIBase
VAR_INPUT
	MaxAxes : DINT := 4;  // Maximum number of axes to support
END_VAR
VAR_OUTPUT
END_VAR
VAR
	zaberGroup : Motion.I_ZaberAxisGroup;  // Interface to Zaber axis group
	axisStatus : ARRAY[0..7] OF ST_HMIZaberAxisStatus;  // Status for up to 8 axes
	numAxes : DINT := 0;  // Actual number of axes in the group
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Cyclic" Id="{a1b2c3d4-e5f6-7890-1234-567890abcdef}">
      <Declaration><![CDATA[METHOD Cyclic
VAR
	i : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Sync status for each axis in the group
IF __ISVALIDREF(zaberGroup) THEN
	numAxes := zaberGroup.GetAxisCount();

	FOR i := 0 TO MIN(numAxes - 1, 7) DO
		// Get axis-specific status
		axisStatus[i].CurrentPosition := zaberGroup.GetPosition(i);
		axisStatus[i].Velocity := zaberGroup.GetVelocity(i);
		axisStatus[i].IsHomed := zaberGroup.IsHomed(i);
		axisStatus[i].IsMoving := zaberGroup.IsMoving(i);
		axisStatus[i].InPosition := zaberGroup.InPosition(i);
		axisStatus[i].AxisIndex := i;

		// Map base component status if available
		axisStatus[i].HmiStatus.Busy := zaberGroup.IsMoving(i);
		axisStatus[i].HmiStatus.Done := zaberGroup.InPosition(i);
		axisStatus[i].HmiStatus.Error := zaberGroup.HasError(i);
		axisStatus[i].HmiStatus.Enabled := zaberGroup.IsEnabled(i);
	END_FOR
END_IF

// Handle base commands (apply to all axes or axis 0)
IF cmd.Enable THEN
	EnableAxis(0);
	cmd.Enable := FALSE;
END_IF

IF cmd.Disable THEN
	DisableAxis(0);
	cmd.Disable := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Init" Id="{b2c3d4e5-f6a7-8901-2345-67890abcdef1}">
      <Declaration><![CDATA[METHOD Init : BOOL
VAR_INPUT
	refZaberGroup : Motion.I_ZaberAxisGroup;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[zaberGroup := refZaberGroup;
IF __ISVALIDREF(zaberGroup) THEN
	numAxes := zaberGroup.GetAxisCount();
	Init := TRUE;
ELSE
	Init := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="MoveAbsolute" Id="{c3d4e5f6-a7b8-9012-3456-7890abcdef12}">
      <Declaration><![CDATA[METHOD MoveAbsolute : BOOL
VAR_INPUT
	axisIndex : DINT;
	position : LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Move axis to absolute position
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	axisStatus[axisIndex].TargetPosition := position;
	MoveAbsolute := zaberGroup.MoveAbsolute(axisIndex, position);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="MoveRelative" Id="{d4e5f6a7-b8c9-0123-4567-890abcdef123}">
      <Declaration><![CDATA[METHOD MoveRelative : BOOL
VAR_INPUT
	axisIndex : DINT;
	distance : LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Move axis relative to current position
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	axisStatus[axisIndex].TargetPosition := axisStatus[axisIndex].CurrentPosition + distance;
	MoveRelative := zaberGroup.MoveRelative(axisIndex, distance);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Home" Id="{e5f6a7b8-c9d0-1234-5678-90abcdef1234}">
      <Declaration><![CDATA[METHOD Home : BOOL
VAR_INPUT
	axisIndex : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Home the specified axis
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	Home := zaberGroup.Home(axisIndex);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="HomeAll" Id="{f6a7b8c9-d0e1-2345-6789-0abcdef12345}">
      <Declaration><![CDATA[METHOD HomeAll : BOOL
VAR
	i : DINT;
	allSuccess : BOOL := TRUE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Home all axes in the group
IF __ISVALIDREF(zaberGroup) THEN
	FOR i := 0 TO numAxes - 1 DO
		allSuccess := allSuccess AND zaberGroup.Home(i);
	END_FOR
	HomeAll := allSuccess;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Stop" Id="{a7b8c9d0-e1f2-3456-7890-abcdef123456}">
      <Declaration><![CDATA[METHOD Stop : BOOL
VAR_INPUT
	axisIndex : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Stop the specified axis
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	Stop := zaberGroup.Stop(axisIndex);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="StopAll" Id="{b8c9d0e1-f2a3-4567-8901-bcdef1234567}">
      <Declaration><![CDATA[METHOD StopAll : BOOL
VAR
	i : DINT;
	allSuccess : BOOL := TRUE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Stop all axes in the group
IF __ISVALIDREF(zaberGroup) THEN
	FOR i := 0 TO numAxes - 1 DO
		allSuccess := allSuccess AND zaberGroup.Stop(i);
	END_FOR
	StopAll := allSuccess;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="EnableAxis" Id="{c9d0e1f2-a3b4-5678-9012-cdef12345678}">
      <Declaration><![CDATA[METHOD EnableAxis : BOOL
VAR_INPUT
	axisIndex : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Enable the specified axis
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	EnableAxis := zaberGroup.Enable(axisIndex);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="DisableAxis" Id="{d0e1f2a3-b4c5-6789-0123-def123456789}">
      <Declaration><![CDATA[METHOD DisableAxis : BOOL
VAR_INPUT
	axisIndex : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Disable the specified axis
IF __ISVALIDREF(zaberGroup) AND axisIndex >= 0 AND axisIndex < numAxes THEN
	DisableAxis := zaberGroup.Disable(axisIndex);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetAxisStatus" Id="{e1f2a3b4-c5d6-7890-1234-ef1234567890}">
      <Declaration><![CDATA[METHOD GetAxisStatus : ST_HMIZaberAxisStatus
VAR_INPUT
	axisIndex : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Return status for specified axis
IF axisIndex >= 0 AND axisIndex <= 7 THEN
	GetAxisStatus := axisStatus[axisIndex];
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_AllAxesStatus" Id="{f2a3b4c5-d6e7-8901-2345-f12345678901}">
      <Declaration><![CDATA[// Property to access status of all axes
PROPERTY P_AllAxesStatus : REFERENCE TO ARRAY[0..7] OF ST_HMIZaberAxisStatus]]></Declaration>
      <Get Name="Get" Id="{a3b4c5d6-e7f8-9012-3456-012345678912}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_AllAxesStatus REF= axisStatus;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_AxisCount" Id="{b4c5d6e7-f8a9-0123-4567-123456789123}">
      <Declaration><![CDATA[PROPERTY P_AxisCount : DINT]]></Declaration>
      <Get Name="Get" Id="{c5d6e7f8-a9b0-1234-5678-234567890234}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_AxisCount := numAxes;
]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>
